--- a/src/App.css
+++ b/src/App.css
@@ -267,7 +267,7 @@ nav {
   padding: 1.5rem;
   border-radius: 8px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-  /* max-width: 180px; */
+  max-width: 180px;
   width: 100%;
   height: 200px;
   object-fit: cover;
