--- a/src/App.css
+++ b/src/App.css
@@ -103,6 +103,7 @@ nav {
 .hero-section {
   position: relative;
   width: 100%;
+  height: 80vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -117,11 +118,12 @@ nav {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  object-position: 50% 30%;
+  object-position: 50% 25%;
   z-index: 0;
-  opacity: 0.6;
+  opacity: 0.3;
   transform: scale(0.99);
   transition: transform 0.3s ease;
+
 }
 
 .overlay {
