--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-:root {
+/* /* :root {
   --primary: #feb3eb;
   --bg: #f5f5f5;
   --mobile-breakpoint: 768px;
@@ -743,4 +743,4 @@ service-img-wrapper {
 
 .clients .section-title {
   margin-bottom: 3rem;
-}
+}  
